# information_theory

./: 信息论及其应用第1次作业.docx  信息论及其应用第2次作业.docx  信息论及其应用第3次作业.docx  第一次作业答案.docx
assignments/: assignment_1.bib  assignment_1.tex  assignment_2.tex  assignment_3.tex  assignment_4.tex  assignment_5.tex  assignment_7.tex
assignments/assignment_big/: lab_report.tex  usage.tex
assignments/assignment_big/压缩结果/: huffman_coded.cb  huffman_coded.data  huffman_coded.txt  lz_alphabet.txt  lz_coded.data  lz_coded.txt
assignments/assignment_big/源代码/: Cargo.toml  data.txt
assignments/assignment_big/源代码/src/: arithmetic_coding.rs  error.rs  helper.rs  huffman_coding.rs  lib.rs  lz_coding.rs
assignments/assignment_big/源代码/tests/: test.rs
assignments/assignment_big/编译好的程序（仅 linux）/: assignment_big
coding/: calculate_distribution.py  helper.py  huffman_coding.py  information_theory.py  test.txt  test_information_theory.py
