[package]
name = "assignment_big"
version = "0.1.0"
authors = ["yuyy <lancelot96@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
serde = "1.0.105"
serde_json = "1.0.50"
base_custom = "^0.2"
structopt = "0.3.12"

[dev-dependencies]
tempfile = "3.0.7"
predicates = "1.0.0"
assert_cmd = "0.11.0"
